--- a/.gitignore
+++ b/.gitignore
@@ -20,7 +20,7 @@ yarn-error.log
 .settings/
 *.sublime-workspace
 
-# Visual Studio Code
+# Visual Studio Code Editor
 .vscode/*
 !.vscode/settings.json
 !.vscode/tasks.json
